5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1674_1107.log
== TEST (2019-04-29 22:06:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7
if (a==0):
	a = "domingo"
	if (c==0):
		c = "domingo"
	elif (c==1):
		c = "segunda"
	elif (c==2):
		c = "terca"
	elif (c==3):
		c = "quarta"
	elif (c==4):
		c = "quinta"
	elif (c==5):
		c = "sexta"
	elif (c==6):
		c = "sabado"
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:07:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7
if (a==0):
	a = "domingo"
	if (c==0):
		c = "domingo"
	elif (c==1):
		c = "segunda"
	elif (c==2):
		c = "terca"
	elif (c==3):
		c = "quarta"
	elif (c==4):
		c = "quinta"
	elif (c==5):
		c = "sexta"
	elif (c==6):
		c = "sabado"
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:08:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7
if (a==0):
	a = "domingo"
	if (c==0):
		c = "domingo"
	elif (c==1):
		c = "segunda"
	elif (c==2):
		c = "terca"
	elif (c==3):
		c = "quarta"
	elif (c==4):
		c = "quinta"
	elif (c==5):
		c = "sexta"
	elif (c==6):
		c = "sabado"
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:08:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7
if (a==0):
	a = "domingo"
	if (c==0):
		c = "domingo"
	elif (c==1):
		c = "segunda"
	elif (c==2):
		c = "terca"
	elif (c==3):
		c = "quarta"
	elif (c==4):
		c = "quinta"
	elif (c==5):
		c = "sexta"
	elif (c==6):
		c = "sabado"
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:09:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7
if (a==0):
	a = "domingo"
	if (c==0):
		c = "domingo"
	elif (c==1):
		c = "segunda"
	elif (c==2):
		c = "terca"
	elif (c==3):
		c = "quarta"
	elif (c==4):
		c = "quinta"
	elif (c==5):
		c = "sexta"
	elif (c==6):
		c = "sabado"
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:10:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7
if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 22:10:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7

if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 22:10:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7

if (a==0):
	a = "domingo"
	if(c==0):
		c = "domingo"
	elif(c==1):
		c = "segunda"
	elif(c==2):
		c = "terca"
	elif(c==3):
		c = "quarta"
	elif(c==4):
		c = "quinta"
	elif(c==5):
		c = "sexta"
	elif(c==6):
		c = "sabado"
else:
	print("A entrada", a, "eh invalida")
		
-- EXECUTION TIME:
0.153945
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
A entrada 6 eh invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:16:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7

if (a==0):
	a = "domingo"
	print(x,a,u)
	if(c==0):
		c = "domingo"
		print(x,c,u)
	elif(c==1):
		c = "segunda"
		print(x,c,u)
	elif(c==2):
		c = "terca"
		print(x,c,u)
	elif(c==3):
		c = "quarta"
		print(x,c,u)
	elif(c==4):
		c = "quinta"
		print(x,c,u)
	elif(c==5):
		c = "sexta"
		print(x,c,u)
	elif(c==6):
		c = "sabado"
		print(x,c,u)
else:
	print("A entrada", a, "eh invalida")
		
-- EXECUTION TIME:
0.14441
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
A entrada 6 eh invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:16:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7

if (a==0):
	a = "domingo"
	print(x,a,u)
	if(c==0):
		c = "domingo"
		print(x,c,u)
	elif(c==1):
		c = "segunda"
		print(x,c,u)
	elif(c==2):
		c = "terca"
		print(x,c,u)
	elif(c==3):
		c = "quarta"
		print(x,c,u)
	elif(c==4):
		c = "quinta"
		print(x,c,u)
	elif(c==5):
		c = "sexta"
		print(x,c,u)
	elif(c==6):
		c = "sabado"
		print(x,c,u)
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:17:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7

if (a==0):
	a = "domingo"
	print(x,a,u)
	if(a==0):
		c = "domingo"
		print(x,c,u)
	elif(a==1):
		c = "segunda"
		print(x,c,u)
	elif(a==2):
		c = "terca"
		print(x,c,u)
	elif(a==3):
		c = "quarta"
		print(x,c,u)
	elif(a==4):
		c = "quinta"
		print(x,c,u)
	elif(a==5):
		c = "sexta"
		print(x,c,u)
	elif(a==6):
		c = "sabado"
		print(x,c,u)
else:
	print("A entrada", a, "eh invalida")
		
-- EXECUTION TIME:
0.250708
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
A entrada 6 eh invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:17:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7

if (a==0):
	a = "domingo"
	print(x,a,u)
	if(a==0):
		c = "domingo"
		print(x,c,u)
	elif(a==1):
		c = "segunda"
		print(x,c,u)
	elif(a==2):
		c = "terca"
		print(x,c,u)
	elif(a==3):
		c = "quarta"
		print(x,c,u)
	elif(a==4):
		c = "quinta"
		print(x,c,u)
	elif(a==5):
		c = "sexta"
		print(x,c,u)
	elif(a==6):
		c = "sabado"
		print(x,c,u)
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:18:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
x = "Hoje eh "
u = " e o dia futuro eh "

c = (a+b)%7

if (a==0):
	a = "domingo"
	print(x,a,u)
	if(a==0):
		c = "domingo"
		print(x+c+u)
	elif(a==1):
		c = "segunda"
		print(x+c+u)
	elif(a==2):
		c = "terca"
		print(x,c,u)
	elif(a==3):
		c = "quarta"
		print(x,c,u)
	elif(a==4):
		c = "quinta"
		print(x,c,u)
	elif(a==5):
		c = "sexta"
		print(x,c,u)
	elif(a==6):
		c = "sabado"
		print(x,c,u)
else:
	print("A entrada", a, "eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:28:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s<=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- OUTPUT:
A entrada 9 eh invalidada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:29:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s=>6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- ERROR:
File "XXXX", line 7
    if (s=>6):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:30:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- OUTPUT:
A entrada 9 eh invalidada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 11:31:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.149937
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalidada
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 11:31:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.191044
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalidada
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:31:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- OUTPUT:
A entrada 9 eh invalidada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:32:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- OUTPUT:
A entrada 9 eh invalidada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:32:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- OUTPUT:
A entrada 9 eh invalidada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:32:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- OUTPUT:
A entrada 9 eh invalidada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 11:32:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalidada")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.204617
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalidada
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 11:40:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = int(input("Dia da semana:"))
b = int(input("Dias futuros:"))
s = a + b
if (s>=6):
	y= s%7
else:
	y = s
if (y==0):
	y = "domingo"
elif (y==1):
	y= "segunda"
elif (y==2):
	y= "terca"
elif (y==3):
	y =  "quarta"
elif (y==4):
	y= "quinta"
elif (y==5):
	y= "sexta"
elif(y==6):
	y="sabado"
if not(0<=a<=6):
	print("A entrada", a, "eh invalida")
elif (a==0):
	x = "domingo"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==1):
	x ="segunda"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==2):
	x= "terca"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==3):
	x = "quarta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==4):
	x = "quinta"
	print("Hoje eh", x, "e o dia futuro eh", y)
elif (a==5):
	x = "sexta"
elif (a==6):
	x = "sabado"
	print("Hoje eh", x, "e o dia futuro eh", y)
-- EXECUTION TIME:
0.12071
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
